--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,16 +16,20 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    <!--Bootstrap Icons-->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
     />
     <!--Custom-->
     <link rel="stylesheet" href="CSS/Style.css" />
+    <script src="JS/Code.js"></script>
+    <link rel="icon" href="Assets/Icons/ToDo.ico" />
     <title>ToDo</title>
   </head>
 
   <body>
+    <!--Firebase-->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 
@@ -50,7 +55,6 @@
       firebase.analytics();
     </script>
     <header
-      id="hd"
       style="
         background: linear-gradient(
           90deg,
@@ -66,38 +70,26 @@
     <main style="padding: 5px">
       <h2 style="position: absolute; left: 5px; display: inline">
         Your
-        <span class="badge rounded-pill bg-info text-dark">ToDo's</span>
+        <span class="badge rounded-pill bg-info text-dark">ToDoos</span>
       </h2>
       <h2 style="position: absolute; right: 5px; display: inline">
-        <button type="button" class="btn btn-primary">+ Add ToDo</button>
+        <button
+          type="button"
+          class="btn btn-primary"
+          style="border-radius: 50px"
+          onclick="Addtodo()"
+        >
+          + Add ToDo
+        </button>
       </h2>
       <section
-        id="ToDo"
+        id="ToDoos"
         style="position: relative; top: 75px; width: 100%"
       ></section>
       <script>
-        firebase
-          .database()
-          .ref("ToDo")
-          .once("value", function (snapshot) {
-            snapshot.forEach((childsnapshot) => {
-              var ToDo = document.getElementById("ToDo");
-              var Do = document.createElement("div");
-              Do.style =
-                "background-color: rgb(241, 241, 241); border-radius: 50px; padding: 10px; margin-bottom: 20px";
-              var InDo = document.createElement("span");
-              InDo.style =
-                "position: absolute; right: 15px;border-radius: 50px";
-              InDo.classList.add("tick");
-              var I = document.createElement("i");
-              I.classList.add("bi", "bi-check");
-              InDo.appendChild(I);
-              Do.innerHTML = childsnapshot.val().Do;
-              Do.appendChild(InDo);
-              ToDo.appendChild(Do);
-            });
-          });
+        Reloadtodoos();
       </script>
     </main>
+    <footer id="Foot"></footer>
   </body>
 </html>
