--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--Custom-->
     <link rel="stylesheet" href="CSS/Style.css" />
     <script src="JS/Code.js"></script>
-    <link rel="icon" href="Assets/Icons/ToDo.ico" />
+    <link rel="icon" href="Assets/Icons/Favicon.ico" />
     <title>ToDo</title>
   </head>
 
