--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <!--Custom-->
     <link rel="stylesheet" href="CSS/Style.css" />
-    <script src="JS/Code.js"></script>
+    <script src="Code.js"></script>
     <link rel="icon" href="Assets/Icons/Favicon.ico" />
     <title>ToDo</title>
   </head>
