--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
     />
     <!--Custom-->
-    <link rel="stylesheet" href="CSS/Style.css" />
+    <link rel="stylesheet" href="Style.css" />
     <script src="Code.js"></script>
     <link rel="icon" href="Assets/Icons/Favicon.ico" />
     <title>ToDo</title>
