--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
         Reloadtodoos();
       </script>
     </main>
-    <footer id="Foot"></footer>
+    <footer id="Foot" style="position: fixed;bottom: 0;right: 0;width: 300px;border: 3px solid #73AD21;"></footer>
   </body>
 </html>
